--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "build",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -19,9 +19,14 @@
     "emailjs-com": "^1.5.14",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
+    "express-favicon": "^2.0.0",
     "express-session": "^1.15.6",
     "mongoose": "^4.12.5",
     "nconf": "^0.8.4",
     "static": "^2.0.0"
+  },
+  "engines": {
+    "node": "0.10.26",
+    "npm": "1.4.3"
   }
 }
