--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development --open",
-    "build": "webpack --display-modules",
-    "start": "node site/server"
+    "build": "webpack --display-modules"
   },
   "author": "",
   "license": "ISC",
   "description": "",
-
+  "scripts": {
+    "start": "node site/server",
+  },
   "devDependencies": {
     "autoprefixer": "^9.0.2",
     "babel-core": "^6.26.3",
